Implemented @CircuitBreaker and fallback methods